example/istio/1.x/base/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - "httpbin"
    - "httpbin.tmp.com"
    - "httpbin.test.com"
  gateways:
    - httpbin-gateway
    - httpbin-gateway-https
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 80
        subset: v1
        host: httpbin
      weight: 50
    - destination:
        port:
          number: 80
        subset: v2
        host: httpbin
      weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin
spec:
  host: httpbin
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
